manifest/devops/kubernetes-dashboard/overlays/non-prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/auth-trust-headers: "true"
    ingress.kubernetes.io/auth-type: forward
    ingress.kubernetes.io/custom-request-headers: 'Authorization: Bearer '
    kubernetes.io/ingress.class: nginx
  name: kubernetes-dashboard
  Namespacepace: kubernetes-dashboard
spec:
  rules:
  - host: geoff-example.com
    http:
      paths:
      - backend:
          service:
            name: kubernetes-dashboard
            port:
              number: 80
        pathType: ImplementationSpecific
